// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions addProductCardAttachments() should dispatch NEW_MESSAGE_ADD_ATTACHMENT_SUCCESS when successfully adding attachments 1`] = `
[
  {
    "resp": [
      {
        "content_type": "application/productCard",
        "extra": {
          "currency": "USD",
          "featured_image": "https://cdn.shopify.com/s/files/1/1781/7573/products/candy.jpg?v=1575311784",
          "price": "1.00",
          "product_id": 1,
          "product_link": "https://storegorgias3.myshopify.com/products/bonbon-acidule?variant=31128766349335",
          "variant_id": 2,
          "variant_name": "baz",
        },
        "name": "bar",
        "size": 0,
        "url": "https://cdn.shopify.com/s/files/1/1781/7573/products/candy.jpg?v=1575311784",
      },
    ],
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_SUCCESS",
  },
]
`;

exports[`actions addProductCardAttachments() should not dispatch NEW_MESSAGE_ADD_ATTACHMENT_SUCCESS when successfully adding attachments in another ticket 1`] = `[]`;

exports[`actions new message addAttachments() should dispatch NEW_MESSAGE_ADD_ATTACHMENT_ERROR when adding more than 1 attachment in a facebook comment 1`] = `
[
  {
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_START",
  },
  {
    "payload": {
      "allowHTML": true,
      "buttons": [],
      "dismissAfter": 9000,
      "dismissible": true,
      "id": "newMessageAddAttachmentsError",
      "message": "
                    Facebook comments have limitations on attachments:
                    <ul>
                        <li>You cannot send more than one attachment.</li>
                        <li>You can only send images or videos.</li>
                    </ul>
                ",
      "position": "top-center",
      "showDismissButton": false,
      "status": "error",
      "title": "We could not add all of your attachments !",
    },
    "type": "reapop/upsertNotification",
  },
  {
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_ERROR",
  },
]
`;

exports[`actions new message addAttachments() should dispatch NEW_MESSAGE_ADD_ATTACHMENT_ERROR when failing to add attachment 1`] = `
[
  {
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_START",
  },
  {
    "error": {
      "response": {},
    },
    "reason": "Failed to upload files. Please try again later",
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_ERROR",
  },
]
`;

exports[`actions new message addAttachments() should dispatch NEW_MESSAGE_ADD_ATTACHMENT_ERROR when source is facebook comment and file has wrong type 1`] = `
[
  {
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_START",
  },
  {
    "payload": {
      "allowHTML": true,
      "buttons": [],
      "dismissAfter": 9000,
      "dismissible": true,
      "id": "newMessageAddAttachmentsError",
      "message": "
                    Facebook comments have limitations on attachments:
                    <ul>
                        <li>You cannot send more than one attachment.</li>
                        <li>You can only send images or videos.</li>
                    </ul>
                ",
      "position": "top-center",
      "showDismissButton": false,
      "status": "error",
      "title": "We could not add all of your attachments !",
    },
    "type": "reapop/upsertNotification",
  },
  {
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_ERROR",
  },
]
`;

exports[`actions new message addAttachments() should dispatch NEW_MESSAGE_ADD_ATTACHMENT_ERROR with a reason  when error code is 413 1`] = `
[
  {
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_START",
  },
  {
    "error": {
      "response": {
        "status": 413,
      },
    },
    "reason": "Failed to upload files. One or more files are larger than the size limit of 10MB.",
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_ERROR",
  },
]
`;

exports[`actions new message addAttachments() should dispatch NEW_MESSAGE_ADD_ATTACHMENT_SUCCESS when successfully adding attachments 1`] = `
[
  {
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_START",
  },
  {
    "resp": [],
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_SUCCESS",
  },
]
`;

exports[`actions new message addAttachments() should not dispatch NEW_MESSAGE_ADD_ATTACHMENT_SUCCESS when successfully adding attachments in another ticket 1`] = `
[
  {
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_START",
  },
]
`;

exports[`actions new message addEmailExtra() should dispatch NEW_MESSAGE_ADD_EMAIL_EXTRA action 1`] = `
[
  {
    "payload": {
      "contentState": Immutable.Record {
        "entityMap": {
          "__add": [Function],
          "__create": [Function],
          "__get": [Function],
          "__getLastCreatedEntityKey": [Function],
          "__mergeData": [Function],
          "__replaceData": [Function],
          "add": [Function],
          "create": [Function],
          "get": [Function],
          "getLastCreatedEntityKey": [Function],
          "mergeData": [Function],
          "replaceData": [Function],
        },
        "blockMap": Immutable.OrderedMap {
          "someRandomKey": Immutable.Record {
            "key": "someRandomKey",
            "type": "unstyled",
            "text": "foo",
            "characterList": Immutable.List [
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
            ],
            "depth": 0,
            "data": Immutable.Map {},
          },
        },
        "selectionBefore": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
        "selectionAfter": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
      },
      "emailExtraArgs": {
        "isForwarded": true,
        "replyThreadMessages": [],
        "signature": Immutable.Map {
          "text": "Cheers, Steve",
          "html": "Cheers, <strong>Steve</strong>",
        },
        "ticket": {
          "assignee_team": null,
          "assignee_user": {
            "email": "alex@gorgias.io",
            "firstname": "Alex",
            "id": 2,
            "lastname": "Plugaru",
            "name": "Alex Plugaru",
          },
          "channel": "email",
          "closed_datetime": null,
          "created_datetime": "2017-07-31T23:07:35.150000+00:00",
          "custom_fields": {},
          "customer": {
            "channels": [
              {
                "address": "jeanbon@gorgias.io",
                "created_datetime": "2017-07-31T21:45:03.399819+00:00",
                "deleted_datetime": null,
                "id": 55,
                "preferred": true,
                "type": "email",
                "updated_datetime": "2017-07-31T21:45:03.399828+00:00",
              },
              {
                "address": "+1 415-548-9999",
                "created_datetime": "2017-07-31T21:45:03.416965+00:00",
                "deleted_datetime": null,
                "id": 56,
                "preferred": true,
                "type": "phone",
                "updated_datetime": "2017-07-31T21:45:03.416976+00:00",
              },
            ],
            "data": null,
            "email": "jeanbon@gorgias.io",
            "firstname": "Jean",
            "id": 34,
            "integrations": {
              "2": {
                "__integration_type__": "http",
                "args": {
                  "name": "Jean Bon",
                },
                "headers": {
                  "Accept": "*/*",
                  "Accept-Encoding": "gzip, deflate",
                  "Connection": "close",
                  "Content-Type": "application/json",
                  "Host": "httpbin.org",
                  "User-Agent": "python-requests/2.14.2",
                },
                "origin": "199.188.194.25",
                "url": "https://httpbin.org/get?name=Jean Bon",
              },
              "5": {
                "__integration_type__": "shopify",
                "customer": {
                  "addresses": [
                    {
                      "address1": "3 rue des volailles",
                      "address2": "",
                      "city": "Paris",
                      "company": "Fleury Michon",
                      "country": "France",
                      "country_code": "FR",
                      "country_name": "France",
                      "customer_id": 4279837195,
                      "default": false,
                      "first_name": "Jean",
                      "id": 4665556619,
                      "last_name": "Bon",
                      "name": "Jean Bon",
                      "phone": "",
                      "province": "Ile de France",
                      "province_code": null,
                      "zip": "75012",
                    },
                  ],
                  "created_at": "2017-03-17T21:26:16-04:00",
                  "default_address": {
                    "address1": "12 rue du poisson cru",
                    "address2": "unit 3",
                    "city": "Paris",
                    "company": "Fleury Michon",
                    "country": "France",
                    "country_code": "FR",
                    "country_name": "France",
                    "customer_id": 4279837195,
                    "default": true,
                    "first_name": "Jean",
                    "id": 4797217995,
                    "last_name": "Bon",
                    "name": "Jean Bon",
                    "phone": null,
                    "province": "Ile de France",
                    "province_code": null,
                    "zip": "75012",
                  },
                  "email": "jeanbon@gorgias.io",
                  "email_marketing_consent": {
                    "consent_updated_at": null,
                    "opt_in_level": "single_opt_in",
                    "state": "not_subscribed",
                  },
                  "first_name": "Jean",
                  "id": 4279837195,
                  "last_name": "Bon",
                  "last_order_id": 4236385803,
                  "last_order_name": "#1202",
                  "multipass_identifier": null,
                  "note": "Un grand jambon",
                  "orders_count": 80,
                  "phone": "+14155489999",
                  "sms_marketing_consent": null,
                  "state": "disabled",
                  "tags": "Active Subscriber",
                  "tax_exempt": false,
                  "total_spent": "131.50",
                  "updated_at": "2017-07-12T20:44:14-04:00",
                  "verified_email": true,
                },
                "orders": [
                  {
                    "billing_address": {
                      "address1": "12 rue du poisson cru",
                      "address2": "unit 3",
                      "city": "Paris",
                      "company": "Fleury Michon",
                      "country": "France",
                      "country_code": "FR",
                      "first_name": "Jean",
                      "last_name": "Bon",
                      "latitude": 48.8293647,
                      "longitude": 2.4265406,
                      "name": "Jean Bon",
                      "phone": null,
                      "province": "Ile de France",
                      "province_code": null,
                      "zip": "75012",
                    },
                    "browser_ip": null,
                    "buyer_accepts_marketing": false,
                    "cancel_reason": null,
                    "cancelled_at": null,
                    "cart_token": null,
                    "checkout_id": null,
                    "checkout_token": null,
                    "closed_at": null,
                    "confirmed": true,
                    "contact_email": "jeanbon@gorgias.io",
                    "created_at": "2017-07-12T16:14:09-04:00",
                    "currency": "EUR",
                    "customer": {
                      "created_at": "2017-03-17T21:26:16-04:00",
                      "default_address": {
                        "address1": "12 rue du poisson cru",
                        "address2": "unit 3",
                        "city": "Paris",
                        "company": "Fleury Michon",
                        "country": "France",
                        "country_code": "FR",
                        "country_name": "France",
                        "customer_id": 4279837195,
                        "default": true,
                        "first_name": "Jean",
                        "id": 4797217995,
                        "last_name": "Bon",
                        "name": "Jean Bon",
                        "phone": null,
                        "province": "Ile de France",
                        "province_code": null,
                        "zip": "75012",
                      },
                      "email": "jeanbon@gorgias.io",
                      "email_marketing_consent": {
                        "consent_updated_at": null,
                        "opt_in_level": "single_opt_in",
                        "state": "not_subscribed",
                      },
                      "first_name": "Jean",
                      "id": 4279837195,
                      "last_name": "Bon",
                      "last_order_id": 4236385803,
                      "last_order_name": "#1202",
                      "multipass_identifier": null,
                      "note": "Un grand jambon",
                      "orders_count": 80,
                      "phone": "+14155489999",
                      "sms_marketing_consent": null,
                      "state": "disabled",
                      "tags": "Active Subscriber",
                      "tax_exempt": false,
                      "total_spent": "131.50",
                      "updated_at": "2017-07-12T20:44:14-04:00",
                      "verified_email": true,
                    },
                    "customer_locale": null,
                    "device_id": null,
                    "discount_codes": [],
                    "email": "jeanbon@gorgias.io",
                    "financial_status": "paid",
                    "fulfillment_status": null,
                    "fulfillments": [],
                    "id": 4236385803,
                    "landing_site": null,
                    "landing_site_ref": null,
                    "line_items": [
                      {
                        "fulfillable_quantity": 1,
                        "fulfillment_service": "manual",
                        "gift_card": false,
                        "grams": 200,
                        "id": 8276448779,
                        "name": "Baskets peu cheres  10.00% Off Auto renew",
                        "price": "9.00",
                        "product_exists": true,
                        "product_id": 9211387275,
                        "properties": [],
                        "quantity": 1,
                        "requires_shipping": true,
                        "sku": "1234567890",
                        "tax_lines": [
                          {
                            "price": "1.50",
                            "rate": 0.2,
                            "title": "TVA",
                          },
                        ],
                        "taxable": true,
                        "title": "Baskets peu cheres  10.00% Off Auto renew",
                        "total_discount": "0.00",
                        "variant_id": 32994232907,
                        "variant_title": null,
                        "vendor": "storegorgias3",
                      },
                    ],
                    "location_id": null,
                    "name": "#1202",
                    "note": "",
                    "note_attributes": [],
                    "number": 202,
                    "order_number": 1202,
                    "order_status_url": null,
                    "payment_gateway_names": [
                      "manual",
                    ],
                    "phone": null,
                    "processed_at": "2017-07-12T16:14:09-04:00",
                    "reference": null,
                    "referring_site": null,
                    "refunds": [],
                    "shipping_address": {
                      "address1": "12 rue du poisson cru",
                      "address2": "unit 3",
                      "city": "Paris",
                      "company": "Fleury Michon",
                      "country": "France",
                      "country_code": "FR",
                      "first_name": "Jean",
                      "last_name": "Bon",
                      "latitude": 48.8293647,
                      "longitude": 2.4265406,
                      "name": "Jean Bon",
                      "phone": null,
                      "province": "Ile de France",
                      "province_code": null,
                      "zip": "75012",
                    },
                    "shipping_lines": [],
                    "source_identifier": null,
                    "source_name": "shopify_draft_order",
                    "source_url": null,
                    "subtotal_price": "9.00",
                    "tags": "",
                    "tax_lines": [
                      {
                        "price": "1.50",
                        "rate": 0.2,
                        "title": "TVA",
                      },
                    ],
                    "taxes_included": true,
                    "test": false,
                    "token": "c4e9a492adf51bed245af52b4dd1789a",
                    "total_discounts": "0.00",
                    "total_line_items_price": "9.00",
                    "total_price": "9.00",
                    "total_price_usd": "10.33",
                    "total_tax": "1.50",
                    "total_weight": 200,
                    "updated_at": "2017-07-12T16:14:10-04:00",
                    "user_id": 95205899,
                  },
                  {
                    "browser_ip": null,
                    "buyer_accepts_marketing": false,
                    "cancel_reason": null,
                    "cancelled_at": null,
                    "cart_token": null,
                    "checkout_id": null,
                    "checkout_token": null,
                    "closed_at": null,
                    "confirmed": true,
                    "contact_email": "jean@gorgias.io",
                    "created_at": "2017-06-16T20:06:10-04:00",
                    "currency": "EUR",
                    "customer": {
                      "created_at": "2017-03-17T21:26:16-04:00",
                      "default_address": {
                        "address1": "12 rue du poisson cru",
                        "address2": "unit 3",
                        "city": "Paris",
                        "company": "Fleury Michon",
                        "country": "France",
                        "country_code": "FR",
                        "country_name": "France",
                        "customer_id": 4279837195,
                        "default": true,
                        "first_name": "Jean",
                        "id": 4797217995,
                        "last_name": "Bon",
                        "name": "Jean Bon",
                        "phone": null,
                        "province": "Ile de France",
                        "province_code": null,
                        "zip": "75012",
                      },
                      "email": "jeanbon@gorgias.io",
                      "email_marketing_consent": {
                        "consent_updated_at": null,
                        "opt_in_level": "single_opt_in",
                        "state": "not_subscribed",
                      },
                      "first_name": "Jean",
                      "id": 4279837195,
                      "last_name": "Bon",
                      "last_order_id": 4236385803,
                      "last_order_name": "#1202",
                      "multipass_identifier": null,
                      "note": "Un grand jambon",
                      "orders_count": 80,
                      "phone": "+14155489999",
                      "sms_marketing_consent": null,
                      "state": "disabled",
                      "tags": "Active Subscriber",
                      "tax_exempt": false,
                      "total_spent": "131.50",
                      "updated_at": "2017-07-12T20:44:14-04:00",
                      "verified_email": true,
                    },
                    "customer_locale": null,
                    "device_id": null,
                    "discount_codes": [],
                    "email": "jean@gorgias.io",
                    "financial_status": "paid",
                    "fulfillment_status": null,
                    "fulfillments": [],
                    "id": 4194477515,
                    "landing_site": null,
                    "landing_site_ref": null,
                    "line_items": [
                      {
                        "fulfillable_quantity": 1,
                        "fulfillment_service": "manual",
                        "gift_card": false,
                        "grams": 10,
                        "id": 8184387659,
                        "name": "Bonbon acidulé",
                        "price": "0.10",
                        "product_exists": true,
                        "product_id": 8345093387,
                        "properties": [],
                        "quantity": 1,
                        "requires_shipping": true,
                        "sku": "0987654321",
                        "tax_lines": [],
                        "taxable": true,
                        "title": "Bonbon acidulé",
                        "total_discount": "0.00",
                        "variant_id": 28442938955,
                        "variant_title": null,
                        "vendor": "storegorgias3",
                      },
                    ],
                    "location_id": null,
                    "name": "#1199",
                    "note": "",
                    "note_attributes": [],
                    "number": 199,
                    "order_number": 1199,
                    "order_status_url": null,
                    "payment_gateway_names": [],
                    "phone": null,
                    "processed_at": "2017-06-16T20:06:10-04:00",
                    "reference": null,
                    "referring_site": null,
                    "refunds": [],
                    "shipping_address": {
                      "address1": "12 rue du poisson cru",
                      "address2": "unit 3",
                      "city": "Paris",
                      "company": "Fleury Michon",
                      "country": "France",
                      "country_code": "FR",
                      "first_name": "Jean",
                      "last_name": "Bon",
                      "latitude": 48.8293647,
                      "longitude": 2.4265406,
                      "name": "Jean Bon",
                      "phone": null,
                      "province": "Ile de France",
                      "province_code": null,
                      "zip": "75012",
                    },
                    "shipping_lines": [],
                    "source_identifier": null,
                    "source_name": "1424624",
                    "source_url": null,
                    "subtotal_price": "0.10",
                    "tags": "",
                    "tax_lines": [],
                    "taxes_included": false,
                    "test": false,
                    "token": "0fbe98fcc45da2abe985cc7eea5a5cf4",
                    "total_discounts": "0.00",
                    "total_line_items_price": "0.10",
                    "total_price": "0.10",
                    "total_price_usd": "0.11",
                    "total_tax": "0.00",
                    "total_weight": null,
                    "updated_at": "2017-06-16T20:06:10-04:00",
                    "user_id": null,
                  },
                ],
              },
            },
            "lastname": "Bon",
            "name": "Jean Bon",
          },
          "events": [],
          "external_id": null,
          "from_agent": true,
          "id": 152,
          "is_unread": true,
          "language": "en",
          "last_message_datetime": "2017-07-31T23:07:35.150000+00:00",
          "last_received_message_datetime": null,
          "messages": [
            {
              "actions": null,
              "attachments": [],
              "auth_customer_identity": null,
              "body_html": "<div>Hi! How are <strong>you</strong>?</div>",
              "body_text": "Hi! How are you?",
              "channel": "email",
              "created_datetime": "2017-07-31T23:07:35.150000+00:00",
              "external_id": null,
              "failed_datetime": null,
              "from_agent": true,
              "id": 182,
              "integration_id": 1,
              "isMessage": true,
              "is_retriable": false,
              "message_id": "<150154245609.11.10386011626513378232.152-182@worker>",
              "meta": null,
              "opened_datetime": null,
              "public": true,
              "receiver": {
                "email": "jeanbon@gorgias.io",
                "firstname": "Jean",
                "id": 34,
                "lastname": "Bon",
                "name": "Jean Bon",
              },
              "rule_id": null,
              "sender": {
                "email": "alex@gorgias.io",
                "firstname": "Alex",
                "id": 2,
                "lastname": "Plugaru",
                "name": "Alex Plugaru",
              },
              "sent_datetime": "2017-07-31T23:07:36.946068+00:00",
              "source": {
                "from": {
                  "address": "support@acme.gorgias.io",
                  "name": "Acme Support",
                },
                "to": [
                  {
                    "address": "jeanbon@gorgias.io",
                    "name": "Jean Bon",
                  },
                ],
                "type": "email",
              },
              "stripped_html": "<div>Hi! How are <strong>you</strong>?</div>",
              "stripped_signature": null,
              "stripped_text": "Hi! How are you?",
              "subject": "",
              "ticket_id": 152,
              "uri": "/api/tickets/1/messages/0/",
              "via": "helpdesk",
            },
          ],
          "messages_count": 1,
          "meta": null,
          "opened_datetime": null,
          "receiver": {
            "email": "jeanbon@gorgias.io",
            "firstname": "Jean",
            "id": 34,
            "lastname": "Bon",
            "name": "Jean Bon",
          },
          "sender": {
            "email": "alex@gorgias.io",
            "firstname": "Alex",
            "id": 2,
            "lastname": "Plugaru",
            "name": "Alex Plugaru",
          },
          "snooze_datetime": null,
          "status": "open",
          "subject": "Great ticket",
          "tags": [
            {
              "decoration": {},
              "id": 1,
              "name": "refund",
            },
          ],
          "trashed_datetime": null,
          "updated_datetime": "2017-07-31T23:07:37.253131+00:00",
          "uri": "/api/tickets/0/",
          "via": "helpdesk",
        },
      },
    },
    "type": "NEW_MESSAGE_ADD_EMAIL_EXTRA",
  },
]
`;

exports[`actions new message newMessageResetFromMessage should send the message data to reset the state 1`] = `
[
  {
    "payload": {
      "body_text": "foo",
    },
    "type": "NEW_MESSAGE_RESET_FROM_MESSAGE",
  },
]
`;

exports[`actions new message prepare() email-forward should cast chat react player videos content into hypertexts when newMessage source is not \`chat\` 1`] = `
[
  {
    "subject": "",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "from": Immutable.Map {
            "address": "1232353100194770",
            "name": "Paul Atréides",
          },
          "type": "chat",
          "to": Immutable.List [
            Immutable.Map {
              "address": "8765645678",
              "name": "Chani",
            },
          ],
        },
        "id": 153,
        "from_agent": false,
        "integration_id": 8,
      },
      Immutable.Map {
        "source": Immutable.Map {
          "from": Immutable.Map {
            "address": "8765645678",
            "name": "Chani",
          },
          "type": "chat",
          "to": Immutable.List [
            Immutable.Map {
              "address": "1232353100194770",
              "name": "Paul Atréides",
            },
          ],
          "cc": Immutable.List [],
        },
        "id": 189,
        "from_agent": true,
        "integration_id": 8,
      },
    ],
    "sourceType": "email",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  {
    "extra": {},
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  {
    "payload": undefined,
    "type": "SET_NEW_MESSAGE_ACTIONS",
  },
  {
    "receivers": {
      "to": [
        {
          "address": "1232353100194770",
          "name": "Paul Atréides",
        },
      ],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  {
    "sender": Immutable.Map {
      "name": "Chani",
      "address": "8765645678",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
  {
    "subject": "",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "from": Immutable.Map {
            "address": "1232353100194770",
            "name": "Paul Atréides",
          },
          "type": "chat",
          "to": Immutable.List [
            Immutable.Map {
              "address": "8765645678",
              "name": "Chani",
            },
          ],
        },
        "id": 153,
        "from_agent": false,
        "integration_id": 8,
      },
      Immutable.Map {
        "source": Immutable.Map {
          "from": Immutable.Map {
            "address": "8765645678",
            "name": "Chani",
          },
          "type": "chat",
          "to": Immutable.List [
            Immutable.Map {
              "address": "1232353100194770",
              "name": "Paul Atréides",
            },
          ],
          "cc": Immutable.List [],
        },
        "id": 189,
        "from_agent": true,
        "integration_id": 8,
      },
    ],
    "sourceType": "sms",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  {
    "extra": {},
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  {
    "payload": undefined,
    "type": "SET_NEW_MESSAGE_ACTIONS",
  },
  {
    "receivers": {
      "to": [
        {
          "address": "1232353100194770",
          "name": "Paul Atréides",
        },
      ],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  {
    "sender": Immutable.Map {
      "name": "Chani",
      "address": "8765645678",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`actions new message prepare() email-forward should not set an attachment in the newMessage if it is already there 1`] = `
[
  {
    "subject": "Fwd: ",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "to": Immutable.List [
            Immutable.Map {
              "name": "Marc",
              "address": "marc.wall@gmail.com",
            },
            Immutable.Map {
              "name": "Acme Support",
              "address": "support@acme.gorgias.io",
            },
          ],
          "from": Immutable.Map {
            "name": "Steve Frizeli",
            "address": "marie.curie@gmail.com",
          },
          "type": "email",
        },
        "id": 151,
        "from_agent": false,
        "attachments": Immutable.List [
          Immutable.Map {
            "url": "foo",
          },
          Immutable.Map {
            "url": "bar",
          },
        ],
      },
      Immutable.Map {
        "source": Immutable.Map {
          "cc": Immutable.List [],
          "to": Immutable.List [
            Immutable.Map {
              "name": "Steve Frizeli",
              "address": "steve.frizeli@gmail.com",
            },
          ],
          "from": Immutable.Map {
            "name": "Acme Support",
            "address": "support@acme.gorgias.io",
          },
          "type": "email",
        },
        "id": 152,
        "from_agent": true,
      },
    ],
    "sourceType": "email",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  {
    "extra": {
      "forward": true,
    },
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  {
    "sender": Immutable.Map {
      "name": "Acme Support",
      "address": "support@acme.gorgias.io",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
  {
    "receivers": {},
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  {
    "resp": [
      {
        "url": "bar",
      },
    ],
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_SUCCESS",
  },
]
`;

exports[`actions new message prepare() email-forward should prepare an email forward 1`] = `
[
  {
    "subject": "Fwd: ",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "to": Immutable.List [
            Immutable.Map {
              "name": "Marc",
              "address": "marc.wall@gmail.com",
            },
            Immutable.Map {
              "name": "Acme Support",
              "address": "support@acme.gorgias.io",
            },
          ],
          "from": Immutable.Map {
            "name": "Steve Frizeli",
            "address": "marie.curie@gmail.com",
          },
          "type": "email",
        },
        "id": 151,
        "from_agent": false,
      },
      Immutable.Map {
        "source": Immutable.Map {
          "cc": Immutable.List [],
          "to": Immutable.List [
            Immutable.Map {
              "name": "Steve Frizeli",
              "address": "steve.frizeli@gmail.com",
            },
          ],
          "from": Immutable.Map {
            "name": "Acme Support",
            "address": "support@acme.gorgias.io",
          },
          "type": "email",
        },
        "id": 152,
        "from_agent": true,
      },
    ],
    "sourceType": "email",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  {
    "extra": {
      "forward": true,
    },
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  {
    "sender": Immutable.Map {
      "name": "Acme Support",
      "address": "support@acme.gorgias.io",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
  {
    "receivers": {},
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  {
    "resp": [],
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_SUCCESS",
  },
]
`;

exports[`actions new message prepare() email-forward should set all attachments of the ticket as attachment of the newMessage 1`] = `
[
  {
    "subject": "Fwd: ",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "to": Immutable.List [
            Immutable.Map {
              "name": "Marc",
              "address": "marc.wall@gmail.com",
            },
            Immutable.Map {
              "name": "Acme Support",
              "address": "support@acme.gorgias.io",
            },
          ],
          "from": Immutable.Map {
            "name": "Steve Frizeli",
            "address": "marie.curie@gmail.com",
          },
          "type": "email",
        },
        "id": 151,
        "from_agent": false,
        "attachments": Immutable.List [
          Immutable.Map {
            "url": "foo",
          },
          Immutable.Map {
            "url": "bar",
          },
        ],
      },
      Immutable.Map {
        "source": Immutable.Map {
          "cc": Immutable.List [],
          "to": Immutable.List [
            Immutable.Map {
              "name": "Steve Frizeli",
              "address": "steve.frizeli@gmail.com",
            },
          ],
          "from": Immutable.Map {
            "name": "Acme Support",
            "address": "support@acme.gorgias.io",
          },
          "type": "email",
        },
        "id": 152,
        "from_agent": true,
        "attachments": Immutable.List [
          Immutable.Map {
            "url": "baz",
          },
          Immutable.Map {
            "url": "far",
          },
        ],
      },
    ],
    "sourceType": "email",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  {
    "extra": {
      "forward": true,
    },
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  {
    "sender": Immutable.Map {
      "name": "Acme Support",
      "address": "support@acme.gorgias.io",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
  {
    "receivers": {},
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  {
    "resp": [
      {
        "url": "foo",
      },
      {
        "url": "bar",
      },
      {
        "url": "baz",
      },
      {
        "url": "far",
      },
    ],
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_SUCCESS",
  },
]
`;

exports[`actions new message prepare() instagram comment should add prefix 1`] = `
[
  {
    "subject": "",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "type": "instagram-media",
          "from": Immutable.Map {
            "address": "1232353100194770",
            "name": "myinstagrampage",
          },
          "to": Immutable.List [
            Immutable.Map {
              "address": "a4sd684a6sd4a5sd",
              "name": "instagramuser",
            },
          ],
          "extra": Immutable.Map {
            "media_id": "519388858269125_626477354226941",
            "permalink": "https://instagram.com/foobar",
          },
        },
        "id": 153,
        "from_agent": true,
      },
      Immutable.Map {
        "source": Immutable.Map {
          "type": "instagram-comment",
          "from": Immutable.Map {
            "address": "a4sd684a6sd4a5sd",
            "name": "instagramuser",
          },
          "to": Immutable.List [
            Immutable.Map {
              "address": "1232353100194770",
              "name": "myinstagrampage",
            },
          ],
          "extra": Immutable.Map {
            "media_id": "519388858269125_626477354226941",
          },
        },
        "id": 189,
        "from_agent": false,
      },
    ],
    "sourceType": "instagram-comment",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  {
    "extra": {},
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  {
    "payload": undefined,
    "type": "SET_NEW_MESSAGE_ACTIONS",
  },
  {
    "receivers": {
      "to": [
        {
          "address": "a4sd684a6sd4a5sd",
          "name": "instagramuser",
        },
      ],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  {
    "sender": Immutable.Map {
      "name": "myinstagrampage",
      "address": "1232353100194770",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
  {
    "appliedMacro": undefined,
    "args": Immutable.Map {
      "contentState": Immutable.Record {
        "entityMap": {
          "__add": [Function],
          "__create": [Function],
          "__get": [Function],
          "__getLastCreatedEntityKey": [Function],
          "__mergeData": [Function],
          "__replaceData": [Function],
          "add": [Function],
          "create": [Function],
          "get": [Function],
          "getLastCreatedEntityKey": [Function],
          "mergeData": [Function],
          "replaceData": [Function],
        },
        "blockMap": Immutable.OrderedMap {
          "someRandomKey": Immutable.Record {
            "key": "someRandomKey",
            "type": "unstyled",
            "text": "@instauser ",
            "characterList": Immutable.List [
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
            ],
            "depth": 0,
            "data": Immutable.Map {},
          },
        },
        "selectionBefore": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
        "selectionAfter": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
      },
      "selectionState": Immutable.Record {
        "anchorKey": "someRandomKey",
        "anchorOffset": 11,
        "focusKey": "someRandomKey",
        "focusOffset": 11,
        "isBackward": false,
        "hasFocus": false,
      },
      "dirty": true,
      "forceFocus": true,
      "forceUpdate": true,
    },
    "currentUser": undefined,
    "forceFocus": true,
    "forceUpdate": true,
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {
      "messages": Immutable.List [
        Immutable.Map {
          "source": Immutable.Map {
            "type": "instagram-media",
            "from": Immutable.Map {
              "address": "1232353100194770",
              "name": "myinstagrampage",
            },
            "to": Immutable.List [
              Immutable.Map {
                "address": "a4sd684a6sd4a5sd",
                "name": "instagramuser",
              },
            ],
            "extra": Immutable.Map {
              "media_id": "519388858269125_626477354226941",
              "permalink": "https://instagram.com/foobar",
            },
          },
          "id": 153,
          "from_agent": true,
        },
        Immutable.Map {
          "source": Immutable.Map {
            "type": "instagram-comment",
            "from": Immutable.Map {
              "address": "a4sd684a6sd4a5sd",
              "name": "instagramuser",
            },
            "to": Immutable.List [
              Immutable.Map {
                "address": "1232353100194770",
                "name": "myinstagrampage",
              },
            ],
            "extra": Immutable.Map {
              "media_id": "519388858269125_626477354226941",
            },
          },
          "id": 189,
          "from_agent": false,
        },
      ],
    },
    "ticketId": undefined,
    "topRankMacroState": null,
    "type": "setResponseText",
  },
]
`;

exports[`actions new message prepare() instagram comment should not add prefix if there is no receiver name 1`] = `
[
  {
    "subject": "",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "type": "instagram-media",
          "from": Immutable.Map {
            "address": "1232353100194770",
            "name": "myinstagrampage",
          },
          "to": Immutable.List [
            Immutable.Map {
              "address": "a4sd684a6sd4a5sd",
              "name": "instagramuser",
            },
          ],
          "extra": Immutable.Map {
            "media_id": "519388858269125_626477354226941",
            "permalink": "https://instagram.com/foobar",
          },
        },
        "id": 153,
        "from_agent": true,
      },
      Immutable.Map {
        "source": Immutable.Map {
          "type": "instagram-comment",
          "from": Immutable.Map {
            "address": "a4sd684a6sd4a5sd",
            "name": "instagramuser",
          },
          "to": Immutable.List [
            Immutable.Map {
              "address": "1232353100194770",
              "name": "myinstagrampage",
            },
          ],
          "extra": Immutable.Map {
            "media_id": "519388858269125_626477354226941",
          },
        },
        "id": 189,
        "from_agent": false,
      },
    ],
    "sourceType": "instagram-comment",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  {
    "extra": {},
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  {
    "payload": undefined,
    "type": "SET_NEW_MESSAGE_ACTIONS",
  },
  {
    "receivers": {
      "to": [
        {
          "address": "a4sd684a6sd4a5sd",
          "name": "instagramuser",
        },
      ],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  {
    "sender": Immutable.Map {
      "name": "myinstagrampage",
      "address": "1232353100194770",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`actions new message prepare() instagram comment should not add prefix if there is text already 1`] = `
[
  {
    "subject": "",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "type": "instagram-media",
          "from": Immutable.Map {
            "address": "1232353100194770",
            "name": "myinstagrampage",
          },
          "to": Immutable.List [
            Immutable.Map {
              "address": "a4sd684a6sd4a5sd",
              "name": "instagramuser",
            },
          ],
          "extra": Immutable.Map {
            "media_id": "519388858269125_626477354226941",
            "permalink": "https://instagram.com/foobar",
          },
        },
        "id": 153,
        "from_agent": true,
      },
      Immutable.Map {
        "source": Immutable.Map {
          "type": "instagram-comment",
          "from": Immutable.Map {
            "address": "a4sd684a6sd4a5sd",
            "name": "instagramuser",
          },
          "to": Immutable.List [
            Immutable.Map {
              "address": "1232353100194770",
              "name": "myinstagrampage",
            },
          ],
          "extra": Immutable.Map {
            "media_id": "519388858269125_626477354226941",
          },
        },
        "id": 189,
        "from_agent": false,
      },
    ],
    "sourceType": "instagram-comment",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  {
    "extra": {},
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  {
    "payload": undefined,
    "type": "SET_NEW_MESSAGE_ACTIONS",
  },
  {
    "receivers": {
      "to": [
        {
          "address": "a4sd684a6sd4a5sd",
          "name": "instagramuser",
        },
      ],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  {
    "sender": Immutable.Map {
      "name": "myinstagrampage",
      "address": "1232353100194770",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`actions new message prepare() other types 1`] = `
[
  {
    "subject": "",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "to": Immutable.List [
            Immutable.Map {
              "name": "Marc",
              "address": "marc.wall@gmail.com",
            },
            Immutable.Map {
              "name": "Acme Support",
              "address": "support@acme.gorgias.io",
            },
          ],
          "from": Immutable.Map {
            "name": "Steve Frizeli",
            "address": "marie.curie@gmail.com",
          },
          "type": "email",
        },
        "id": 151,
        "from_agent": false,
      },
      Immutable.Map {
        "source": Immutable.Map {
          "cc": Immutable.List [],
          "to": Immutable.List [
            Immutable.Map {
              "name": "Steve Frizeli",
              "address": "steve.frizeli@gmail.com",
            },
          ],
          "from": Immutable.Map {
            "name": "Acme Support",
            "address": "support@acme.gorgias.io",
          },
          "type": "email",
        },
        "id": 152,
        "from_agent": true,
      },
    ],
    "sourceType": "email",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  {
    "extra": {},
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  {
    "payload": undefined,
    "type": "SET_NEW_MESSAGE_ACTIONS",
  },
  {
    "receivers": {
      "to": [
        {
          "address": "steve.frizeli@gmail.com",
          "name": "Steve Frizeli",
        },
      ],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  {
    "sender": Immutable.Map {
      "name": "Acme Support",
      "address": "support@acme.gorgias.io",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`actions new message prepare() other types 2`] = `
[
  {
    "subject": "",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "to": Immutable.List [
            Immutable.Map {
              "name": "Marc",
              "address": "marc.wall@gmail.com",
            },
            Immutable.Map {
              "name": "Acme Support",
              "address": "support@acme.gorgias.io",
            },
          ],
          "from": Immutable.Map {
            "name": "Steve Frizeli",
            "address": "marie.curie@gmail.com",
          },
          "type": "email",
        },
        "id": 151,
        "from_agent": false,
      },
      Immutable.Map {
        "source": Immutable.Map {
          "cc": Immutable.List [],
          "to": Immutable.List [
            Immutable.Map {
              "name": "Steve Frizeli",
              "address": "steve.frizeli@gmail.com",
            },
          ],
          "from": Immutable.Map {
            "name": "Acme Support",
            "address": "support@acme.gorgias.io",
          },
          "type": "email",
        },
        "id": 152,
        "from_agent": true,
      },
    ],
    "sourceType": "chat",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  {
    "extra": {},
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  {
    "payload": undefined,
    "type": "SET_NEW_MESSAGE_ACTIONS",
  },
  {
    "receivers": {
      "to": [
        {
          "address": "steve.frizeli@gmail.com",
          "name": "Steve Frizeli",
        },
      ],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  {
    "sender": Immutable.Map {
      "name": "Acme Support",
      "address": "support@acme.gorgias.io",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`actions new message prepare() other types 3`] = `
[
  {
    "subject": "",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "to": Immutable.List [
            Immutable.Map {
              "name": "Marc",
              "address": "marc.wall@gmail.com",
            },
            Immutable.Map {
              "name": "Acme Support",
              "address": "support@acme.gorgias.io",
            },
          ],
          "from": Immutable.Map {
            "name": "Steve Frizeli",
            "address": "marie.curie@gmail.com",
          },
          "type": "email",
        },
        "id": 151,
        "from_agent": false,
      },
      Immutable.Map {
        "source": Immutable.Map {
          "cc": Immutable.List [],
          "to": Immutable.List [
            Immutable.Map {
              "name": "Steve Frizeli",
              "address": "steve.frizeli@gmail.com",
            },
          ],
          "from": Immutable.Map {
            "name": "Acme Support",
            "address": "support@acme.gorgias.io",
          },
          "type": "email",
        },
        "id": 152,
        "from_agent": true,
      },
    ],
    "sourceType": "facebook-comment",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  {
    "extra": {},
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  {
    "payload": undefined,
    "type": "SET_NEW_MESSAGE_ACTIONS",
  },
  {
    "receivers": {
      "to": [
        {
          "address": "steve.frizeli@gmail.com",
          "name": "Steve Frizeli",
        },
      ],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  {
    "sender": Immutable.Map {
      "name": "Acme Support",
      "address": "support@acme.gorgias.io",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`actions new message prepare() other types 4`] = `
[
  {
    "subject": "",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "to": Immutable.List [
            Immutable.Map {
              "name": "Marc",
              "address": "marc.wall@gmail.com",
            },
            Immutable.Map {
              "name": "Acme Support",
              "address": "support@acme.gorgias.io",
            },
          ],
          "from": Immutable.Map {
            "name": "Steve Frizeli",
            "address": "marie.curie@gmail.com",
          },
          "type": "email",
        },
        "id": 151,
        "from_agent": false,
      },
      Immutable.Map {
        "source": Immutable.Map {
          "cc": Immutable.List [],
          "to": Immutable.List [
            Immutable.Map {
              "name": "Steve Frizeli",
              "address": "steve.frizeli@gmail.com",
            },
          ],
          "from": Immutable.Map {
            "name": "Acme Support",
            "address": "support@acme.gorgias.io",
          },
          "type": "email",
        },
        "id": 152,
        "from_agent": true,
      },
    ],
    "sourceType": "facebook-message",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  {
    "extra": {},
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  {
    "payload": undefined,
    "type": "SET_NEW_MESSAGE_ACTIONS",
  },
  {
    "receivers": {
      "to": [
        {
          "address": "steve.frizeli@gmail.com",
          "name": "Steve Frizeli",
        },
      ],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  {
    "sender": Immutable.Map {
      "name": "Acme Support",
      "address": "support@acme.gorgias.io",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`actions new message prepareTicketDataToSend() should add discount codes to meta 1`] = `
{
  "actions": Immutable.List [],
  "body_text": "Your discount code is DISCO",
  "meta": {
    "discount_codes": [
      "DISCO",
    ],
  },
  "sender": Immutable.Map {
    "id": 1,
    "name": "Steve",
  },
  "source": {
    "from": {
      "address": "support@acme.gorgias.io",
    },
    "type": "email",
  },
}
`;

exports[`actions new message prepareTicketDataToSend() should add discount codes to meta only if in message body 1`] = `
{
  "actions": Immutable.List [],
  "body_text": "Only FREEBIE in body text",
  "meta": {
    "discount_codes": [
      "FREEBIE",
    ],
  },
  "sender": Immutable.Map {
    "id": 1,
    "name": "Steve",
  },
  "source": {
    "from": {
      "address": "support@acme.gorgias.io",
    },
    "type": "email",
  },
}
`;

exports[`actions new message prepareTicketDataToSend() should add email extra to the message when source type is email 1`] = `
[
  [
    Immutable.Record {
      "entityMap": {
        "__add": [Function],
        "__create": [Function],
        "__get": [Function],
        "__getLastCreatedEntityKey": [Function],
        "__mergeData": [Function],
        "__replaceData": [Function],
        "add": [Function],
        "create": [Function],
        "get": [Function],
        "getLastCreatedEntityKey": [Function],
        "mergeData": [Function],
        "replaceData": [Function],
      },
      "blockMap": Immutable.OrderedMap {
        "someRandomKey": Immutable.Record {
          "key": "someRandomKey",
          "type": "unstyled",
          "text": "Hi ",
          "characterList": Immutable.List [
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
          ],
          "depth": 0,
          "data": Immutable.Map {},
        },
      },
      "selectionBefore": Immutable.Record {
        "anchorKey": "someRandomKey",
        "anchorOffset": 0,
        "focusKey": "someRandomKey",
        "focusOffset": 0,
        "isBackward": false,
        "hasFocus": false,
      },
      "selectionAfter": Immutable.Record {
        "anchorKey": "someRandomKey",
        "anchorOffset": 0,
        "focusKey": "someRandomKey",
        "focusOffset": 0,
        "isBackward": false,
        "hasFocus": false,
      },
    },
    {
      "isForwarded": false,
      "replyThreadMessages": [
        {
          "actions": null,
          "attachments": [],
          "auth_customer_identity": null,
          "body_html": "<div>Hi! How are <strong>you</strong>?</div>",
          "body_text": "Hi! How are you?",
          "channel": "email",
          "created_datetime": "2017-07-31T23:07:35.150000+00:00",
          "external_id": null,
          "failed_datetime": null,
          "from_agent": true,
          "id": 182,
          "integration_id": 1,
          "isMessage": true,
          "is_retriable": false,
          "message_id": "<150154245609.11.10386011626513378232.152-182@worker>",
          "meta": null,
          "opened_datetime": null,
          "public": true,
          "receiver": {
            "email": "jeanbon@gorgias.io",
            "firstname": "Jean",
            "id": 34,
            "lastname": "Bon",
            "name": "Jean Bon",
          },
          "rule_id": null,
          "sender": {
            "email": "alex@gorgias.io",
            "firstname": "Alex",
            "id": 2,
            "lastname": "Plugaru",
            "name": "Alex Plugaru",
          },
          "sent_datetime": "2017-07-31T23:07:36.946068+00:00",
          "source": {
            "from": {
              "address": "support@acme.gorgias.io",
              "name": "Acme Support",
            },
            "to": [
              {
                "address": "jeanbon@gorgias.io",
                "name": "Jean Bon",
              },
            ],
            "type": "email",
          },
          "stripped_html": "<div>Hi! How are <strong>you</strong>?</div>",
          "stripped_signature": null,
          "stripped_text": "Hi! How are you?",
          "subject": "",
          "ticket_id": 152,
          "uri": "/api/tickets/1/messages/0/",
          "via": "helpdesk",
        },
      ],
      "signature": Immutable.Map {
        "text": "cheers, Steve",
        "html": "cheers, <strong>Steve</strong>",
      },
      "ticket": {
        "channel": "",
        "messages": [
          {
            "actions": null,
            "attachments": [],
            "auth_customer_identity": null,
            "body_html": "<div>Hi! How are <strong>you</strong>?</div>",
            "body_text": "Hi! How are you?",
            "channel": "email",
            "created_datetime": "2017-07-31T23:07:35.150000+00:00",
            "external_id": null,
            "failed_datetime": null,
            "from_agent": true,
            "id": 182,
            "integration_id": 1,
            "isMessage": true,
            "is_retriable": false,
            "message_id": "<150154245609.11.10386011626513378232.152-182@worker>",
            "meta": null,
            "opened_datetime": null,
            "public": true,
            "receiver": {
              "email": "jeanbon@gorgias.io",
              "firstname": "Jean",
              "id": 34,
              "lastname": "Bon",
              "name": "Jean Bon",
            },
            "rule_id": null,
            "sender": {
              "email": "alex@gorgias.io",
              "firstname": "Alex",
              "id": 2,
              "lastname": "Plugaru",
              "name": "Alex Plugaru",
            },
            "sent_datetime": "2017-07-31T23:07:36.946068+00:00",
            "source": {
              "from": {
                "address": "support@acme.gorgias.io",
                "name": "Acme Support",
              },
              "to": [
                {
                  "address": "jeanbon@gorgias.io",
                  "name": "Jean Bon",
                },
              ],
              "type": "email",
            },
            "stripped_html": "<div>Hi! How are <strong>you</strong>?</div>",
            "stripped_signature": null,
            "stripped_text": "Hi! How are you?",
            "subject": "",
            "ticket_id": 152,
            "uri": "/api/tickets/1/messages/0/",
            "via": "helpdesk",
          },
        ],
        "status": "open",
        "subject": "Foo subject",
      },
    },
  ],
]
`;

exports[`actions new message prepareTicketDataToSend() should add email extra to the message when source type is email 2`] = `
{
  "actions": Immutable.List [],
  "body_html": "<div>Extra <strong>content</strong></div>",
  "body_text": "Extra content",
  "sender": Immutable.Map {
    "id": 1,
    "name": "Steve",
  },
  "source": {
    "from": {
      "address": "support@acme.gorgias.io",
    },
    "type": "email",
  },
}
`;

exports[`actions new message prepareTicketDataToSend() should add email extra to the message when source type is email 3`] = `
{
  "contentState": [
    {
      "data": {},
      "depth": 0,
      "text": "Extra content",
      "type": "unstyled",
    },
  ],
  "emailExtraAdded": true,
}
`;

exports[`actions new message prepareTicketDataToSend() should not add discount codes to meta if discount in old messages 1`] = `
{
  "actions": Immutable.List [],
  "body_text": "Current message ends here. On Thu, Feb 16, 2023, at 02:43 PM, Acme Support <somemail> wrote: old FREEBIE discount",
  "sender": Immutable.Map {
    "id": 1,
    "name": "Steve",
  },
  "source": {
    "from": {
      "address": "support@acme.gorgias.io",
    },
    "type": "email",
  },
  "stripped_text": "Current message ends here.",
}
`;

exports[`actions new message prepareTicketDataToSend() should not add discount codes to meta if discount in old messages and agent expands mail 1`] = `
{
  "actions": Immutable.List [],
  "body_html": "Current message ends here. On Thu, Feb 16, 2023, at 02:43 PM, Acme Support <a>somemail</a>&gt; wrote: old FREEBIE discount",
  "body_text": "Current message ends here. On Thu, Feb 16, 2023, at 02:43 PM, Acme Support <somemail> wrote: old FREEBIE discount",
  "sender": Immutable.Map {
    "id": 1,
    "name": "Steve",
  },
  "source": {
    "from": {
      "address": "support@acme.gorgias.io",
    },
    "type": "email",
  },
}
`;

exports[`actions new message prepareTicketDataToSend() should not add email extra to the message when source type is not email 1`] = `
{
  "actions": Immutable.List [],
  "body_html": "original html",
  "body_text": "original text",
  "sender": Immutable.Map {
    "id": 1,
    "name": "Steve",
  },
  "source": {
    "type": "facebook-message",
  },
}
`;

exports[`actions new message prepareTicketDataToSend() should not add email extra to the message when source type is not email 2`] = `
{
  "contentState": [
    {
      "data": {},
      "depth": 0,
      "text": "Hi ",
      "type": "unstyled",
    },
  ],
}
`;

exports[`actions new message prepareTicketDataToSend() should replace empty message with intenal note text from internal note action 1`] = `
{
  "actions": Immutable.List [],
  "body_html": "<div>Hello</div>",
  "body_text": "Hello",
  "public": false,
  "sender": Immutable.Map {
    "id": 1,
    "name": "Steve",
  },
  "source": {
    "from": {
      "address": "",
      "name": "",
    },
    "type": "internal-note",
  },
}
`;

exports[`actions new message prepareTicketDataToSend() should transform empty message with macro to internal note 1`] = `
{
  "actions": Immutable.List [],
  "body_html": "<div>Applied macro "Macro 1"</div>",
  "body_text": "Applied macro "Macro 1"",
  "public": false,
  "sender": Immutable.Map {
    "id": 1,
    "name": "Steve",
  },
  "source": {
    "from": {
      "address": "",
      "name": "",
    },
    "type": "internal-note",
  },
}
`;

exports[`actions new message prepareTicketMessage should prepare next new message after we submitted an instagram comment 1`] = `
{
  "actions": undefined,
  "attachments": [],
  "body_html": "",
  "body_text": "",
  "channel": "email",
  "from_agent": true,
  "macros": [],
  "mention_ids": [],
  "public": true,
  "sender": Immutable.Map {
    "id": 1,
    "name": "foo",
  },
  "source": {
    "extra": {
      "include_thread": false,
      "media_id": "519388858269125_626477354226941",
    },
    "to": [
      {
        "address": undefined,
        "name": "messagereceiver",
      },
    ],
    "type": "instagram-comment",
  },
  "subject": "",
  "ticket_id": 12,
  "via": "helpdesk",
}
`;

exports[`actions new message prepareTicketMessage should prepare next new message after we submitted an instagram comment 2`] = `
{
  "appliedMacro": null,
  "cacheAdded": false,
  "contentState": [
    {
      "data": {},
      "depth": 0,
      "text": "",
      "type": "unstyled",
    },
  ],
  "dirty": false,
  "emailExtraAdded": false,
  "firstNewMessage": true,
  "forceFocus": false,
  "forceUpdate": false,
  "inserted_discounts": [],
}
`;

exports[`actions new message restoreNewMessageDraft should inject draft data to newMessage 1`] = `
[
  {
    "payload": {
      "attachments": Immutable.List [
        Immutable.Map {
          "content_type": "image/jpeg",
          "name": "E-pZxm5XoAAmsSo.jpg",
          "size": 106372,
          "url": "https://uploads.gorgi.us/development/Zr1WE86rb6J4Mvgl/E-pZxm5XoAAmsSo-7586849a-2cb8-470e-b941-00065b5d79fc.jpg",
        },
      ],
      "source": Immutable.Map {
        "type": "email",
      },
    },
    "type": "RESTORE_NEW_MESSAGE_DRAFT",
  },
]
`;

exports[`actions new message sendTicketMessage should submit new message 1`] = `
[
  {
    "events": Immutable.List [],
    "message": {
      "actions": undefined,
      "attachments": [],
      "body_html": "<div><br /></div>",
      "body_text": "",
      "channel": "email",
      "from_agent": true,
      "macros": [],
      "mention_ids": [],
      "public": true,
      "sender": Immutable.Map {
        "id": 1,
        "name": "foo",
      },
      "source": {
        "bcc": [],
        "cc": [],
        "extra": {
          "include_thread": false,
        },
        "from": {},
        "to": [],
        "type": "email",
      },
      "subject": "",
      "ticket_id": 12,
      "via": "helpdesk",
    },
    "messageId": "nowTimestamp",
    "messages": Immutable.List [],
    "resetMessage": true,
    "retry": false,
    "status": undefined,
    "ticketId": 12,
    "ticketVia": "helpdesk",
    "type": "NEW_MESSAGE_SUBMIT_TICKET_MESSAGE_START",
  },
  {
    "macro": undefined,
    "type": "APPLY_MACRO",
  },
  {
    "appliedMacro": null,
    "args": Immutable.Map {
      "forceFocus": true,
      "forceUpdate": true,
    },
    "currentUser": Immutable.Map {
      "id": 1,
      "name": "foo",
    },
    "forceFocus": true,
    "forceUpdate": true,
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {
      "trashed_datetime": null,
      "channel": "email",
      "is_unread": false,
      "priority": "normal",
      "custom_fields": Immutable.Map {},
      "reply_options": Immutable.Map {
        "email": Immutable.Map {
          "answerable": true,
        },
        "internal-note": Immutable.Map {
          "answerable": true,
        },
      },
      "spam": false,
      "subject": "",
      "messages": Immutable.List [],
      "assignee_team": null,
      "via": "helpdesk",
      "state": Immutable.Map {
        "dirty": false,
        "latestEventDatetime": null,
        "appliedMacro": null,
        "hasAttemptedToCloseTicket": false,
      },
      "status": "open",
      "tags": Immutable.List [],
      "events": Immutable.List [],
      "assignee_user": null,
      "id": 12,
      "_internal": Immutable.Map {
        "shouldDisplayAuditLogEvents": false,
        "shouldDisplayAllFollowUps": false,
        "loading": Immutable.Map {
          "fetchTicket": false,
          "deleteMessage": false,
          "setSpam": false,
          "setTrash": false,
        },
        "pendingMessages": Immutable.List [],
        "isShopperTyping": false,
        "isShopperTypingTimeoutId": undefined,
        "isPartialUpdating": false,
      },
      "customer": null,
    },
    "ticketId": 12,
    "topRankMacroState": null,
    "type": "setResponseText",
  },
  {
    "receivers": {
      "to": [],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  {
    "sender": Immutable.Map {
      "name": "Acme Support",
      "address": "support@acme.gorgias.io",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
  {
    "ticketId": 12,
    "topRankMacroState": null,
    "type": "SET_TOP_RANK_MACRO_STATE",
  },
]
`;

exports[`actions new message setResponseText() should always pass the args to the reducer 1`] = `
[
  {
    "appliedMacro": undefined,
    "args": Immutable.Map {
      "contentState": Immutable.Record {
        "entityMap": {
          "__add": [Function],
          "__create": [Function],
          "__get": [Function],
          "__getLastCreatedEntityKey": [Function],
          "__mergeData": [Function],
          "__replaceData": [Function],
          "add": [Function],
          "create": [Function],
          "get": [Function],
          "getLastCreatedEntityKey": [Function],
          "mergeData": [Function],
          "replaceData": [Function],
        },
        "blockMap": Immutable.OrderedMap {
          "someRandomKey": Immutable.Record {
            "key": "someRandomKey",
            "type": "unstyled",
            "text": "foo",
            "characterList": Immutable.List [
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
            ],
            "depth": 0,
            "data": Immutable.Map {},
          },
        },
        "selectionBefore": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
        "selectionAfter": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
      },
    },
    "currentUser": undefined,
    "forceFocus": false,
    "forceUpdate": false,
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {
      "messages": Immutable.List [
        Immutable.Map {
          "source": Immutable.Map {
            "to": Immutable.List [
              Immutable.Map {
                "name": "Marc",
                "address": "marc.wall@gmail.com",
              },
              Immutable.Map {
                "name": "Acme Support",
                "address": "support@acme.gorgias.io",
              },
            ],
            "from": Immutable.Map {
              "name": "Steve Frizeli",
              "address": "marie.curie@gmail.com",
            },
            "type": "email",
          },
          "id": 151,
          "from_agent": false,
        },
        Immutable.Map {
          "source": Immutable.Map {
            "cc": Immutable.List [],
            "to": Immutable.List [
              Immutable.Map {
                "name": "Steve Frizeli",
                "address": "steve.frizeli@gmail.com",
              },
            ],
            "from": Immutable.Map {
              "name": "Acme Support",
              "address": "support@acme.gorgias.io",
            },
            "type": "email",
          },
          "id": 152,
          "from_agent": true,
        },
      ],
    },
    "ticketId": undefined,
    "topRankMacroState": null,
    "type": "setResponseText",
  },
]
`;

exports[`actions new message setSender action should handle phone channel 1`] = `
[
  {
    "sender": Immutable.Map {
      "name": "Acme Phone",
      "address": "+12133734254",
      "id": 6,
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`actions new message setSender action with address 1`] = `
[
  {
    "sender": Immutable.Map {
      "name": "Acme Support",
      "address": "support@acme.gorgias.io",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`actions new message setSubject() default value 1`] = `
[
  {
    "subject": "",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
]
`;

exports[`actions new message setSubject() given value 1`] = `
[
  {
    "subject": "hello world",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
]
`;

exports[`actions updatePotentialCustomers should resolve when cancelled 1`] = `undefined`;

exports[`actions updatePotentialCustomers should return a list of potential customer on success 1`] = `
{
  "data": [
    {
      "address": "marie@gorgias.io",
      "customer": {
        "id": 4,
        "name": "Marie Curie",
      },
      "id": 4,
      "name": "Marie Curie",
      "type": "email",
      "user": {
        "id": 4,
        "name": "Marie Curie",
      },
    },
  ],
  "meta": {},
  "object": "list",
  "searchEngine": undefined,
  "uri": "",
}
`;
